[project]
name = "SimpleDDPImplementation"
version = "1.0.0"
description = "Benchmarking and triton implemented Flashattention2"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "humanfriendly",
    "matplotlib",
    "numpy",
    "pytest>=8",
    "regex>=2024.11.6",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pandas>=2",
    "ty>=0.0.1a16",
    "tensorboardx>=2.6.4",
    "torch>=2.2.2",
]

[tool.uv]
package = false
python-preference = "managed"



[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]
